--- a/HHn.tex
+++ b/HHn.tex
@@ -980,7 +980,7 @@ Hence, we consider the metric $\langle\cdot,\cdot \rangle_{AN}$ on $\g{a}\oplus\
 =\langle X_{\g{a}},Y_{\g{a}} \rangle+\frac{1}{2}\langle X_{\g{n}},Y_{\g{n}}\rangle.
 \]
 If $\mathsf{g}$ denotes the metric of $\mathsf{H}(V)$, then $\phi_o^*\mathsf{g}$ makes $\phi_o\colon AN\to \mathsf{H}(V)$ an isometry. 
-Since $g^{-1}\circ\phi_o\circ g=\phi_o$ para todo $g\in G$ we have $L_g^*(\phi_o^*\mathsf{g})=\phi_o^*\mathsf{g}$.
+Since $g^{-1}\circ\phi_o\circ g=\phi_o$ for all $g\in G$ we have $L_g^*(\phi_o^*\mathsf{g})=\phi_o^*\mathsf{g}$.
 Hence, $\phi_o^*\mathsf{g}$ is left-invariant.
 This implies that $AN$ is a Lie group with a left-invariant metric that coincides with $\langle\cdot,\cdot \rangle_{AN}$ at the identity, and with this metric it is isometric to $\mathsf{H}(V)$.
 
@@ -1075,7 +1075,7 @@ With this definition we also get
 =2\langle\lambda,\Im(u^*v)\rangle_\H,\\
 \langle J_X U,V\rangle_{AN}
 &{}=\langle -u\lambda,v\rangle_{\H^n}
-=\langle\lambda,\Im(u*v)\rangle_\H.
+=\langle\lambda,\Im(u^*v)\rangle_\H.
 \end{aligned}
 \]
 Therefore,
